@@ -59,8 +59,6 @@ extern "C"
     GSASL_NEEDS_MORE = 1,
     GSASL_UNKNOWN_MECHANISM = 2,
     GSASL_MECHANISM_CALLED_TOO_MANY_TIMES = 3,
-    GSASL_FOPEN_ERROR = 5,
-    GSASL_FCLOSE_ERROR = 6,
     GSASL_MALLOC_ERROR = 7,
     GSASL_BASE64_ERROR = 8,
     GSASL_CRYPTO_ERROR = 9,
@@ -68,7 +66,6 @@ extern "C"
     GSASL_MECHANISM_PARSE_ERROR = 30,
     GSASL_AUTHENTICATION_ERROR = 31,
     GSASL_INTEGRITY_ERROR = 33,
-    GSASL_NO_MORE_REALMS = 34,
     GSASL_NO_CLIENT_CODE = 35,
     GSASL_NO_SERVER_CODE = 36,
     GSASL_INVALID_HANDLE = 50,
